backend fini
ajout des méthode de filtres fonctionnelle avec la BDD
